--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.45.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
